# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: django-test.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses_tests/: test_delete.py  test_update.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_tasklabelrelation_task_labels.py
task_manager/templates/: base.html  footer.html  index.html  login.html  navigation.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  details.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/tests/: test_home_page.py
task_manager/tests/fixtures/: db.json  db_labels.json  db_status.json  db_task.json  db_task_two_users.json  db_task_with_label.json  db_tasks.json  user.json
task_manager/tests/labels_tests/: test_create.py  test_delete.py  test_delete_with_task.py  test_list.py  test_update.py
task_manager/tests/statuses_tests/: test_create.py  test_delete.py  test_delete_with_task.py  test_list.py  test_update.py
task_manager/tests/tasks_tests/: test_create.py  test_delete.py  (+4 more)
task_manager/users/: forms.py  models.py  urls.py  views.py
(+7 files in other folders)
