[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Elenlith <mishchenkov@list.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django-bootstrap4 = "^23.1"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
