[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager is a web-app allowing you to create tasks, custom statuses and labels for them, assign executors, etc."
authors = ["Elenlith <mishchenkov@list.ru>"]
readme = "README.md"
repository = "https://github.com/Elenlith/python-project-52.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free For Home Use",
    "Operating System :: Unix",
]
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django-bootstrap4 = "^23.1"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.4.0"
django-filter = "^23.2"
coverage = "^7.2.5"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
